syntax = "proto3";

package analytics;

// block_spans
// Span: represents a function call instance
message Span {
  uint32 scope_hash = 1;
  double begin_ms = 2;
  double end_ms = 3;
  uint32 alpha = 4;  //[0-255] non-linear transformation of occupancy for spans
                     // that are a lower level of detail
}

// one span track contains spans at one height of call stack
message SpanTrack {
  repeated Span spans = 1;
}

message SpanBlockLOD {
  uint32 lod_id = 1;
  repeated SpanTrack tracks = 2;
}

// async spans are identified by a unique u64 monotonically increasing
message AsyncSpan {
  uint64 span_id = 1;
  uint32 scope_hash = 2;
  double begin_ms = 3;
  double end_ms = 4;
  uint32 alpha = 5;
}

message AsyncSpanTrack {
  repeated AsyncSpan spans = 1;
}
